--- a/templates/cadastro_animal.html
+++ b/templates/cadastro_animal.html
@@ -64,7 +64,7 @@
             <img src="../static/img/patinha.png" alt="pata" class="pata3">
         </div>
 
-        <div class="centraliza">
+        <div class="centraliza2">
             <form class="inputs prala" action="{{ url_for('cadastro_animal', codigo=codigo) }}" method="POST">
                 <div class="pergunta">
                     <label class="nomeinput" for="nome">Nome: </label>
