--- a/templates/cadastro_usuario.html
+++ b/templates/cadastro_usuario.html
@@ -55,8 +55,8 @@
 
 
 
-        <div class="foto alinhando-foto2">
-            <img src="../static/img/usuario sem foto.png" alt="Ícone de usuário">
+        <div class="foto d-flex">
+                <img src="../static/img/usuario sem foto.png" alt="Ícone de usuário">
         </div>
 
         <section class="login2">
