--- a/templates/edicao_veterinario.html
+++ b/templates/edicao_veterinario.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="campo">
                         <label>Número de registro:</label>
-                        <input type="number" name="numeroderegistro" required value="{{ usuario.numero_registro }}"/>
+                        <input type="text" name="numeroderegistro" required value="{{ usuario.numero_registro }}"/>
                     </div>
                 
                     <div class="campo">
