--- a/templates/pagina_veterinario.html
+++ b/templates/pagina_veterinario.html
@@ -18,7 +18,7 @@
         <a href="/#depoimentos">Depoimentos</a>
         <div class="botoes">
             <a class="login animacao" href="/sair">Sair</a>
-            <a class="botao animacao" href="{{ url_for('edicao_usuario', codigo=codigo) }}">Editar</a>
+            <a class="botao animacao" href="{{ url_for('edicao_veterinario', codigo=codigo) }}">Editar</a>
         </div>
     </nav>
 </header>
